<resources>
    <string name="app_name">segundoEvalucacion</string>
    <string name="registrar">Registrar</string>
    <string name="agregar">Añadir Publicacion</string>
    <string name="titulo">Titulo</string>
    <string name="descripcion">Descripcion</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="modificar">Modificar Publicacion</string>
    <string name="publicacion">Publicacion</string>
    <string name="borrar">Borrar</string>
    <string name="btn_modificar">Modificar</string>
    <string name="perfil">Perfil</string>
    <string name="item_borra">Borrar Todo</string>
    <string name="nombre">Introduce tu nombre</string>
    <string name="apellido">Introduce tu apellido</string>
    <string name="mapa">Click Mapa para localizacion</string>
    <string name="localizacion">latitude</string>
    <string name="longitude">longitude</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="ajuste">Modifica Ajuste</string>
    <string name="brillo">Modifica brillo </string>
    <string name="web">Buscador de problema </string>
    <string name="Video">Video Explicativo de App </string>
    <string name="sonido">Modifica Sonido </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>