<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A2E3EC"
    tools:context=".UpdateActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/publicacion"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ed2_titulo"
        android:layout_width="231dp"
        android:layout_height="26dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/titulo"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/ed2_descripcion"
        android:layout_width="231dp"
        android:layout_height="154dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/descripcion"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed2_titulo" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn2_volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <Button
        android:id="@+id/btn_modificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/btn_modificar"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_view3" />

    <Button
        android:id="@+id/btn_borrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="70dp"
        android:backgroundTint="#E61717"
        android:text="@string/borrar"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/btn_modificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_modificar" />

    <ImageView
        android:id="@+id/img_view3"
        android:layout_width="135dp"
        android:layout_height="133dp"
        android:layout_marginTop="24dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed2_descripcion"
        app:srcCompat="@drawable/ic_baseline_image_24" />

</androidx.constraintlayout.widget.ConstraintLayout>